2010-01-24  Chris Jerdonek  <cjerdonek@webkit.org>

        Reviewed by David Kilzer.

        Added to contributing code page a pointer to the preferred
        license text. Also added information about copyright lines.

        https://bugs.webkit.org/show_bug.cgi?id=34017

        * coding/contributing.html:
        * css/main.css:
          - Added CSS class for books.

2010-01-21  Chris Jerdonek  <cjerdonek@webkit.org>

        Reviewed by David Levin.

        Added screenshots and clearer instructions on how to submit
        a patch for review.

        https://bugs.webkit.org/show_bug.cgi?id=32542

        Also added that a bug report should be selected or created
        prior to submitting a patch.

        * coding/contributing.html:
        * coding/images: Added.
        * coding/images/contribute_add_attachment.png: Added.
        * coding/images/contribute_mark_review.png: Added.

2010-01-11  Maciej Stachowiak  <mjs@apple.com>

        Not reviewed; updated for truth (and readability).

        Fixed some wrong listings and reorganized this page.

        * security/security-group-members.html:

2010-01-06  Dirk Schulze  <krit@webkit.org>

        Reviewed by Nikolas Zimmermann.

        SVG feImage support
        https://bugs.webkit.org/show_bug.cgi?id=31905

        Update SVG status page. We support feDisplacementMap and feImage now.

        * projects/svg/status.xml:

2009-12-20  Chris Jerdonek  <chris.jerdonek@gmail.com>

        Reviewed by Darin Adler.

        Removed outdated contact information from bug life cycle page.
        
        https://bugs.webkit.org/show_bug.cgi?id=32494

        * quality/lifecycle.html:

2009-12-13  Dan Bernstein  <mitz@apple.com>

        Reviewed by Sam Weinig.

        Add a style guideline concerning floating point literals
        https://bugs.webkit.org/show_bug.cgi?id=32497

        * coding/coding-style.html:

2009-12-09  Marwan Al Jubeh  <marwan.aljubeh@gmail.com>

        Reviewed by Adam Roben.
