@@ -1,3 +1,13 @@
+2010-02-02  Jens Alfke  <snej@chromium.org>
+
+        Reviewed by David Levin.
+
+        Clarified coding guidelines on wiki to allow indentation of
+        _nested_ namespaces.
+        https://bugs.webkit.org/show_bug.cgi?id=32137
+
+        * coding/coding-style.html:
+
 2010-01-24  Chris Jerdonek  <cjerdonek@webkit.org>
 
         Reviewed by David Kilzer.
